Add simplehlfhr, IsHttpServerShuttingDown, ConnFirstByteLooksLikeHttp

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-/test/main.exe
-/test/main
-/test/test.exe
-/test/test
+test/*.exe
+test/main
+test/test
+simplehlfhr/test/*.exe
+simplehlfhr/test/main
+simplehlfhr/test/test
