--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-test/*.exe
-test/main
-test/test
-simplehlfhr/test/*.exe
-simplehlfhr/test/main
-simplehlfhr/test/test
+testdata/*.exe
+testdata/main
+testdata/testdata
