--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: 
       run: |
         cd testdata
-        go test
+        sudo go test
 
   test-stable:
     runs-on: ubuntu-latest
@@ -38,4 +38,4 @@ jobs:
     - name: 
       run: |
         cd testdata
-        go test
+        sudo go test
