--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,10 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.21'
-        check-latest: false
+        check-latest: true
 
-    - name: 
-      run: |
-        cd testdata
-        sudo go test
+    - name: test
+      run: cd testdata && sudo go test
 
   test-stable:
     runs-on: ubuntu-latest
@@ -35,7 +33,5 @@ jobs:
         go-version: stable
         check-latest: true
 
-    - name: 
-      run: |
-        cd testdata
-        sudo go test
+    - name: test
+      run: cd testdata && sudo go test
