--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,20 +1,15 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Test
+name: Workflows
 
 on:
   - push
   - pull_request
 
 jobs:
-  test:
+  test-1_19:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./testdata
-        shell: sudo --preserve-env=PATH bash -e {0}
 
     steps:
       - uses: actions/checkout@v6
@@ -27,10 +22,17 @@ jobs:
           cache: false
 
       - name: Test Go 1.19
+        working-directory: ./testdata
+        shell: sudo --preserve-env=PATH bash -e {0}
         run: |
-          echo $PATH
           go version
           go test
+
+  test-stable:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v6
 
       - name: Setup Go Stable
         uses: actions/setup-go@v6
@@ -40,9 +42,42 @@ jobs:
           cache: false
 
       - name: Test Go Stable
+        working-directory: ./testdata
+        shell: sudo --preserve-env=PATH bash -e {0}
         run: |
-          echo $PATH
           go version
-          go mod edit -go $(go version | grep -Eo [0-9]+\.[0-9]+)
+          go mod edit -go $(go version | grep -Eo [0-9]+\.[0-9]+ | head -1)
           go get golang.org/x/net@latest
           go test
+
+  go-pkg:
+    if: github.event_name == 'push' && github.ref_name == 'main'
+    needs:
+      - test-1_19
+      - test-stable
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: script
+        env:
+          BRANCH: go-pkg
+          DIR: .go-pkg
+          GITUSER: github-actions
+        run: |
+          rm -rf $DIR
+          git init -b $BRANCH $DIR
+          for item in *; do
+              [ -e "$item" ] || continue
+              [ "$item" = "testdata" ] && continue
+              cp -r "$item" "$DIR/"
+          done
+          cd $DIR
+          git config user.name $GITUSER
+          git config user.email $GITUSER@users.noreply.github.com
+          git add .
+          git commit -m $BRANCH
+          git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git push origin $BRANCH -f
