--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,7 +1,7 @@
 # This workflow will build a golang project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
-name: Workflows
+name: Jobs
 
 on:
   - push
@@ -52,11 +52,12 @@ jobs:
 
   go-pkg:
     if: github.event_name == 'push' && github.ref_name == 'main'
-    needs:
-      - test-1_19
-      - test-stable
+    needs: ["test-1_19", "test-stable"]
 
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v6
@@ -65,7 +66,6 @@ jobs:
         env:
           BRANCH: go-pkg
           DIR: .go-pkg
-          GITUSER: github-actions
         run: |
           rm -rf $DIR
           git init -b $BRANCH $DIR
@@ -75,8 +75,8 @@ jobs:
               cp -r "$item" "$DIR/"
           done
           cd $DIR
-          git config user.name $GITUSER
-          git config user.email $GITUSER@users.noreply.github.com
+          git config user.name $GITHUB_ACTOR
+          git config user.email $GITHUB_ACTOR@users.noreply.github.com
           git add .
           git commit -m $BRANCH
           git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
