--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -8,20 +8,20 @@ on:
   - pull_request
 
 jobs:
-  test-1_19:
+  test-1_13:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v6
 
-      - name: Setup Go 1.19
+      - name: Setup Go 1.13
         uses: actions/setup-go@v6
         with:
-          go-version: "1.19"
+          go-version: "1.13"
           check-latest: true
           cache: false
 
-      - name: Test Go 1.19
+      - name: Test Go 1.13
         working-directory: ./testdata
         shell: sudo --preserve-env=PATH bash -e {0}
         run: |
@@ -47,12 +47,13 @@ jobs:
         run: |
           go version
           go mod edit -go $(go version | grep -Eo [0-9]+\.[0-9]+ | head -1)
-          go get golang.org/x/net@latest
+          go get -u golang.org/x/net@latest
+          go mod tidy
           go test
 
   go-pkg:
     if: github.event_name == 'push' && github.ref_name == 'main'
-    needs: ["test-1_19", "test-stable"]
+    needs: ["test-1_13", "test-stable"]
 
     runs-on: ubuntu-latest
 
