--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           go version
           go mod edit -go $(go version | grep -Eo [0-9]+\.[0-9]+ | head -1)
-          go get golang.org/x/net@latest
+          go get -u golang.org/x/net@latest
           go test
 
   go-pkg:
@@ -78,6 +78,6 @@ jobs:
           git config user.name $GITHUB_ACTOR
           git config user.email $GITHUB_ACTOR@users.noreply.github.com
           git add .
-          git commit -m $BRANCH
+          git commit -m "commit by github actions (https://github.com/$GITHUB_REPOSITORY/actions/runs/${{ github.run_id }})"
           git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git push origin $BRANCH -f
