--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -48,6 +48,7 @@ jobs:
           go version
           go mod edit -go 1.19
           go get -u golang.org/x/net@v0.35.0
+          go mod tidy
           go test
 
   test-stable:
@@ -70,6 +71,7 @@ jobs:
           go version
           go mod edit -go $(go version | grep -Eo [0-9]+\.[0-9]+ | head -1)
           go get -u golang.org/x/net@latest
+          go mod tidy
           go test
 
   go-pkg:
