--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Jobs
 
 on:
@@ -73,6 +70,7 @@ jobs:
           for item in *; do
               [ -e "$item" ] || continue
               [ "$item" = "testdata" ] && continue
+              [ "$item" = "TEST.md" ] && continue
               cp -r "$item" "$DIR/"
           done
           cd $DIR
